[project]
name = "meeting-env"
version = "0.1.0"
description = "Meeting Optimization Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "transformers",
    "torch",
    "sentencepiece",
    "accelerate"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"